[package]
name = "ggegui"
version = "0.3.2"
edition = "2021"
authors = ["NemuiSen <NemuiSen@proton.me>"]
license  = "MIT"
repository = "https://github.com/NemuiSen/ggez-egui"
keywords = ["ggez", "egui", "gui", "gamedev"]
description = "A simple implementation of egui for ggez"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20.1"
ggez = { git = "https://github.com/ggez/ggez.git", rev = "7d4de6809130f5720b02e7c61d9fb6c9da15f76e" }
